--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.10.0",
+    "bcrypt": "^6.0.0",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
+    "eslint": "^9.29.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0"
   },
   "devDependencies": {
