--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -31,7 +31,7 @@ services:
           target: /app
         - action: rebuild
           path: ./backend/package.json
-    command: "npm run dev"
+    command: sh -c "npx prisma generate && npx prisma migrate reset --force && npm run dev"
 
   postgres:
     environment:
