--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -4,7 +4,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.dev
     env_file:
-      - ./frontend/.env
+      - ./frontend/.env.local
     ports:
       - "3000:3000"
     develop:
