--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^3.3.1",
-    "next-auth": "^4.24.11"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
