feat: Add group management backend
Added group-related backend routes and websockets to ensure realtime interactivity of the groups in the application.

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -43,5 +43,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  cache:
+    ports:
+      - "6379:6379"
+    command: redis-server --loglevel debug
+
 volumes:
   postgres_data:
