Revert "feat/backend users on map"

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -31,7 +31,7 @@ services:
           target: /app
         - action: rebuild
           path: ./backend/package.json
-    command: sh -c "npx prisma migrate deploy && npm run dev"
+    command: "npm run dev"
 
   postgres:
     environment:
