--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,29 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
-    "axios": "^1.10.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.523.0",
-    "mapbox-gl": "^3.13.0",
-    "next": "15.3.3",
-    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^3.3.1"
+    "next": "15.3.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
-    "@types/mapbox-gl": "^3.4.1",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4",
-    "typescript": "^5.8.3"
+    "@eslint/eslintrc": "^3"
   }
 }
