--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 COPY . .
 RUN npm install
+RUN npx prisma generate
 ENV HOST=0.0.0.0
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
