--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.523.0",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.3",
@@ -19,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
