--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
