--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@stripe/stripe-js": "^7.4.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
