feat: merged with dev, now contains user integration, and mobile responsive design. the yml was changed for port 5433:5432

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -28,7 +28,7 @@ services:
       watch:
         - action: sync
           path: ./backend
-          target: /app
+          target: /appdock
         - action: rebuild
           path: ./backend/package.json
     command: sh -c "npx prisma migrate deploy && npm run dev"
