feat: redirecting based on subscription status from signup/signin page

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && next build",
     "start": "node server",
     "dev": "nodemon server",
-    // "stripe:listen": "stripe listen --forward-to localhost:8080/api/payments/stripe-webhook --skip-verify"
+    "stripe:listen": "stripe listen --forward-to localhost:8080/api/payments/stripe-webhook --skip-verify"
   },
   "author": "",
   "license": "ISC",
