--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -7,8 +7,8 @@ on:
       - main
       - feat/deploy
     # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - backend/**
+    # paths:
+    #   - backend/**
 
 env:
   IMAGE_NAME: backend-hopin
@@ -55,6 +55,7 @@ jobs:
             host: ${{ secrets.VM_HOST }}
             username: ${{ secrets.VM_USER }}
             key: ${{ secrets.VM_SSH_KEY }}
+            passphrase: ${{ secrets.VM_SSH_KEY_PASSPHRASE}}
             script: |
                 echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
                 echo "${{ secrets.BACKEND_ENV }}" > ./backend.env
