--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -7,8 +7,8 @@ on:
       - main
       - feat/deploy
     # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - frontend/**
+    # paths:
+    #   - frontend/**
 
 env:
   IMAGE_NAME: frontend-hopin
@@ -59,6 +59,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
+          passphrase: ${{ secrets.VM_SSH_KEY_PASSPHRASE}}
           script: |
             echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ghcr.io/utsc-cscc09-programming-on-the-web/frontend-hopin:latest
