--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -43,24 +43,23 @@ jobs:
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
           # Use Docker `latest` tag convention
-          [ "$VERSION" == "main" ] && VERSION=latest
+          [[ "$VERSION" == "main" || "$VERSION" == "deploy" ]] && VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
-      - name: Deploy on VM using SSH 
+      - name: Deploy on VM using SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-            host: ${{ secrets.VM_HOST }}
-            username: ${{ secrets.VM_USER }}
-            key: ${{ secrets.VM_SSH_KEY }}
-            passphrase: ${{ secrets.VM_SSH_KEY_PASSPHRASE}}
-            script: |
-                echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-                echo "${{ secrets.BACKEND_ENV }}" > ./backend.env
-                docker pull ghcr.io/utsc-cscc09-programming-on-the-web/backend-hopin:latest
-                docker stop backend || true
-                docker rm backend || true
-                docker run -d --name backend --env-file ./backend.env -p 3000:3000 ghcr.io/utsc-cscc09-programming-on-the-web/backend-hopin:latest
-
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USER }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          passphrase: ${{ secrets.VM_SSH_KEY_PASSPHRASE}}
+          script: |
+            echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            echo "${{ secrets.BACKEND_ENV }}" > ./backend.env
+            docker pull ghcr.io/utsc-cscc09-programming-on-the-web/backend-hopin:latest
+            docker stop backend || true
+            docker rm backend || true
+            docker run -d --name backend --env-file ./backend.env -p 3000:3000 ghcr.io/utsc-cscc09-programming-on-the-web/backend-hopin:latest
