--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   nginx-proxy:
     image: jwilder/nginx-proxy
@@ -14,6 +12,8 @@ services:
       - ./vhost:/etc/nginx/vhost.d
       - ./html:/usr/share/nginx/html
       - ./dhparam:/etc/nginx/dhparam
+    labels:
+      - com.github.nginx-proxy.nginx=true
 
   nginx-proxy-acme:
     image: nginxproxy/acme-companion
