fix: Fix group management bugs
Fixed all the bugs related to the group websocket implementation

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -46,7 +46,7 @@ services:
   cache:
     ports:
       - "6379:6379"
-    command: redis-server --loglevel debug
+    command: ["redis-server", "--loglevel", "warning"]
 
 volumes:
   postgres_data:
