--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "prisma generate && next build",
     "start": "node server",
     "dev": "nodemon server",
-    "stripe:listen": "stripe listen --forward-to localhost:8080/api/payments/stripe-webhook --skip-verify"
+    "stripe:listen": "stripe listen --forward-to localhost:8080/api/webhooks"
   },
   "author": "",
   "license": "ISC",
@@ -26,12 +29,13 @@
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.0",
+    "rate-limiter-flexible": "^7.1.1",
+    "redis": "^4.6.7",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "prisma": "^6.10.0",
-    "ts-node": "^10.9.2"
+    "prisma": "^6.10.0"
   }
 }
