--- a/compose.yaml
+++ b/compose.yaml
@@ -45,6 +45,8 @@ services:
     image: ghcr.io/utsc-cscc09-programming-on-the-web/backend-hopin:latest
     container_name: backend
     restart: always
+    env_file:
+      - backend.env
     expose:
       - "8080"
     environment:
