--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
