--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@stripe/stripe-js": "^7.4.0",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.523.0",
     "mapbox-gl": "^3.13.0",
