--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:security": "cd tests/security && ./run-tests.sh",
+    "test:security:install": "cd tests/security && npm install",
+    "test:security:quick": "cd tests/security && npm run test:security",
     "build": "prisma generate && next build",
     "start": "node server",
     "dev": "nodemon server",
