--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@stripe/react-stripe-js": "^3.8.0",
     "@stripe/stripe-js": "^7.4.0",
     "@types/dompurify": "^3.0.5",
     "axios": "^1.10.0",
