--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.10.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
