--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "prisma generate && next build",
-    "start": "node server",
-    "dev": "nodemon server"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.10.0",
-    "bcrypt": "^6.0.0",
-    "connect-redis": "^9.0.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "eslint": "^9.29.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
-    "node-fetch": "^3.3.2",
-    "prisma": "^6.10.0",
-    "pg": "^8.16.0",
-    "redis": "^5.5.6",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "ts-node": "^10.9.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "server.js",
+    "type": "module",
+    "prisma": {
+        "seed": "node prisma/seed.js"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "prisma generate && next build",
+        "start": "node server",
+        "dev": "nodemon server"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@prisma/client": "^6.10.0",
+        "axios": "^1.11.0",
+        "bcrypt": "^6.0.0",
+        "body-parser": "^2.2.0",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "eslint": "^9.29.0",
+        "express": "^5.1.0",
+        "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.1",
+        "node-fetch": "^3.3.2",
+        "prisma": "^6.10.0",
+        "pg": "^8.16.0",
+        "rate-limiter-flexible": "^7.2.0",
+        "redis": "^4.6.7",
+        "socket.io": "^4.8.1",
+        "stripe": "^18.3.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10",
+        "prettier": "^3.5.3",
+        "ts-node": "^10.9.2"
+    }
 }
