--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@mapbox/search-js-react": "^1.3.0",
+    "@stripe/react-stripe-js": "^3.8.0",
+    "@stripe/stripe-js": "^7.4.0",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.10.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.523.0",
     "mapbox-gl": "^3.13.0",
