deploy: added deploy testing to dev branch

--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - feat/deploy
+      - dev
     # Only run this workflow if the commit has modified files from frontend
     paths:
       - frontend/**
