--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.16.0",
     "redis": "^5.5.6",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
