--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "rate-limiter-flexible": "^7.2.0",
     "redis": "^4.6.7",
     "socket.io": "^4.8.1",
-    "stripe": "^18.3.0"
+    "stripe": "^18.3.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
