--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["mapbox"]
+"cSpell.words": [
+    "mapbox"
+],
+"editor.indentSize": "tabSize",
+"editor.tabSize": 2,
+"bashBeautify.tabSize": 2
 }
