--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
         "axios": "^1.10.0",
         "babel-plugin-react-compiler": "^19.1.0-rc.2",
         "clsx": "^2.1.1",
-        "dompurify": "^3.2.6",
         "framer-motion": "^12.23.0",
         "lucide-react": "^0.523.0",
         "mapbox-gl": "^3.13.0",
@@ -29,6 +28,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
+        "sanitize-html": "^2.17.0",
         "socket.io-client": "^4.8.1",
         "tailwind-merge": "^3.3.1",
         "zustand": "^5.0.6"
@@ -36,7 +36,6 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
-        "@types/dompurify": "^3.2.0",
         "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
         "@types/mapbox-gl": "^3.4.1",
         "@types/node": "^20",
