--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm ci
 COPY . .
 COPY .env .env
 
-# Build the Next.js app
+# Build the Next.js app.
 RUN npm run build
 ENV PORT=3000
 EXPOSE 3000
