--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,13 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.1",
         "node-fetch": "^3.3.2",
-        "prisma": "^6.10.0",
         "pg": "^8.16.0",
+        "prisma": "^6.10.0",
         "rate-limiter-flexible": "^7.2.0",
         "redis": "^4.6.7",
         "socket.io": "^4.8.1",
-        "stripe": "^18.3.0"
+        "stripe": "^18.3.0",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10",
