--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
         "uuid": "^11.1.0"
     },
     "devDependencies": {
+        "@types/uuid": "^10.0.0",
         "nodemon": "^3.1.10",
         "prettier": "^3.5.3",
         "ts-node": "^10.9.2"
